[package]
name = "cobalt-bypass"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
colog = "1.3.0"
dotenvy_macro = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
